feat: 替换 DashScope SDK 为 HTTP 调用，接入自定义 AI 端点
- 移除 DashScope SDK 依赖，改用 RestTemplate HTTP 调用
- 支持自定义 base_url、api-key、model（OpenAI 兼容格式）
- 默认配置: http://newapi.raycloud.cn + qwen3.6-plus
- OssService 未配置 OSS 时自动转 base64 data URI 传图

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>